src/components/Digits/EmptyState/empty-state.module.css
.empty-state {
  width: 100%;
  height: 85%;

  display: grid;
  grid-template: min-content 1fr min-content / 1fr;
  place-content: center;
  place-items: center;
  place-self: center;
  row-gap: 20px;

  cursor: pointer;
}

.empty-state svg {
  min-width: 100px;
  min-height: 100px;
  width: 85%;
  height: 85%;
  fill: var(--color-2);
}

.empty-state p {
  font-family: var(--font-main);
  font-size: 1rem;
  font-variation-settings: "wght" 650;
  color: var(--font-color-1);
}

